--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <div id="container-user">
                         <div id="user-information">
                                 <img id="img-profile"
-                                        src="https://media-exp2.licdn.com/dms/image/C4E03AQG0BnoLNb-Grw/profile-displayphoto-shrink_200_200/0/1576937612693?e=1663804800&v=beta&t=B_9KGiCaZYkKtUxgHdvOrHCBHcJu4y3j9ZXcaFQTMfE">
+                                        src="img/myPhoto.jpg">
                                 <h3>CONTATO</h3>
                                 <ul>
                                         <li id="localization">
